# worldkeeper

./: Cargo.toml  DEVELOPMENT.md  GAME_DESIGN.md  README.md
.github/instructions/: instructions.md.instructions.md
docs/: architecture.md  project_structure.md
src/: main.rs
src/components/: ui.rs
src/plugins/: menu_plugin.rs  mod.rs
src/resources/: game_state.rs
src/systems/: menu.rs  mod.rs
